WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262021
REGRESSION(
268312@main
): std::nullopt de-ref in `checkRelevancyOfContentVisibilityElement`
https://bugs.webkit.org/show_bug.cgi?id=262021
Summary
REGRESSION(268312@main): std::nullopt de-ref in `checkRelevancyOfContentVisib...
Tim Nguyen (:ntim)
Reported
2023-09-24 16:34:27 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-24 16:34:37 PDT
<
rdar://problem/115966527
>
Tim Nguyen (:ntim)
Comment 2
2023-09-24 16:36:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18141
EWS
Comment 3
2023-09-24 18:40:36 PDT
Committed
268382@main
(88a90c5d9443): <
https://commits.webkit.org/268382@main
> Reviewed commits have been landed. Closing PR #18141 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug