REGRESSION(268312@main): std::nullopt de-ref in `checkRelevancyOfContentVisibilityElement` https://bugs.webkit.org/show_bug.cgi?id=262021 rdar://115966527

Reviewed by Cameron McCormack.

Fix a crash on builds that use a newer compiler, that affects many of the content-visibility tests.

The crash was happening because we were trying to access `oldRelevancy->isEmpty()` without checking if `oldRelevancy` isn't `std::nullopt`.
To resolve this, we use the `isRelevantToUser()` function which includes that check.

Also renamed skippedContentStateDidChange to updateAnimations for clarity, and switched the boolean arguments to an enum class for clarity.

* Source/WebCore/dom/ContentVisibilityDocumentState.cpp:
(WebCore::ContentVisibilityDocumentState::checkRelevancyOfContentVisibilityElement const):
(WebCore::ContentVisibilityDocumentState::updateAnimations):
(WebCore::ContentVisibilityDocumentState::skippedContentStateDidChange): Deleted.
* Source/WebCore/dom/ContentVisibilityDocumentState.h:
* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::styleWillChange):

Canonical link: https://commits.webkit.org/268382@main